# project_chitchat_api

./: .gitignore  README.md  init.py  main.py  pyproject.toml
middleware/: auth.py  authenticator.py  validator.py
routes/: errors.py  server.py  user.py
src/: init.py  main.py
src/middleware/: authenticator.py  validator.py
src/myApp/: init.py  main.py  utils.py
src/myApp/middleware/: authenticator.py  validator.py
src/myApp/routes/: server.py  user.py
src/routes/: server.py  user.py
