[project]
name = "project-chitchat-api"
version = "0.1.0"
description = ""
authors = [
    {name = "JezzyOweTwo"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis (>=5.2.1,<6.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "websockets (>=15.0,<16.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "src", from = "."}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
