[project]
name = "project-chitchat-api"
version = "0.1.0"
description = ""
authors = [
    {name = "JezzyOweTwo",email = "fjeziah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "websockets (>=14.2,<15.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-socketio (>=5.12.1,<6.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
]

[tool.poetry]

packages = [    
    { include = "myApp", from = "src" },
    { include = "test", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "set PYTHONPATH=src"